# housing-pricer

./: .gitattributes  .gitignore  Makefile  README.md  pylintrc  pyproject.toml
housing_pricer/data_processing/: _booli_processing_utils.py  data_processing_lab.ipynb  data_processing_utils.py
housing_pricer/data_processing/booli_final_prices/: _booli_processing_utils.py  booli_processing_dev.ipynb
housing_pricer/final_price_scraping/: README.md
housing_pricer/listing_scraping/: README.md
housing_pricer/modelling/: xgboost_dev.ipynb
housing_pricer/scraping/: __init__.py  _booli_scraping.py  _data_manager_utils.py  _scraped_dates.txt  _scraping.py  base_scraper.py  booli_scraper_cli.py  data_manager.py  scraped_dates_manager.py  scraper.py  scraper_cli.py
housing_pricer/scraping/_utils/: _booli_scraping.py
housing_pricer/scraping/booli_final_prices/: _booli_scraping_utils.py  _scraping.py  booli_scraper.py  scraper_cli.py
housing_pricer/scraping/data_storage/: _scraped_dates.txt  _scraped_endpoint_hashes.json
housing_pricer/scraping/final_price_scraping/: _booli_scraping_utils.py  booli_scraper.py
housing_pricer/scraping/sdk/: __init__.py  data_manager.py  delayed_keyboard_interrupt.py  scraped_dates_manager.py  scraper.py
housing_pricer/valuation_api/: main.py  test_listing.json  valuation_runner.py  xgb.json
tests/: test_address_to_coordinates.py  test_data_manager.py  test_delayed_keyboard_interrupt.py  test_geocode_address.py  test_model_input_validator.py  test_scraped_dates_manager.py  test_scraper.py
(+10 files in other folders)
