[tool.poetry]
name = "housing_pricer"
version = "0.0.0"
description = ""
authors = ["william <vvilliamnorman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "2.31.0"
bs4 = "0.0.1"
pyrate_limiter = "3.1.0"
strenum = "0.4.15"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.9.1"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
