[tool.poetry]
name = "housing_pricer"
version = "0.0.0"
description = ""
authors = ["william <vvilliamnorman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10, <=3.13"
pytest = "^7.4.3"
pydantic = "^2.5.3"

requests = "^2.31.0"
bs4 = "0.0.1"
lxml = "^4.9.3"
pyrate_limiter = "^3.1.0"
strenum = "^0.4.15"

tqdm = "^4.66.1"
pandas = "^2.1.3"
matplotlib = "^3.8.0"
plotly = "^5.17.0"
nbformat = "5.9.2"
click = "^8.1.7"

scikit-learn = "^1.3.2"
xgboost = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.9.1"
isort = "^5.12.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
